# kalman-filter

./: .gitignore  CMakeLists.txt  main.py
include/: kalman_filter.hpp
src/: kalman_filter.cpp
